feat: implement T2 - GitLab API integration with rate limiting
- Add comprehensive GitLab API rate limiting handling with exponential backoff
- Implement fetchWithRateLimitHandling method for robust API calls
- Handle 429 Too Many Requests with proper retry logic and Retry-After header support
- Add specific error handling for GitLab API error codes (401, 403, 404)
- Support both gitlab.com and self-hosted GitLab instances
- Add unit tests for rate limiting behavior with mock responses
- Verify exponential backoff and proper waiting periods

GitLab API integration now includes enterprise-grade rate limiting and error handling, supporting both authenticated and unauthenticated requests with proper fallback mechanisms.